--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
   <title>The 3 web languages</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
+  <meta name="author" content="Jake Buytenhuys">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <!-- Font Awesome icon cheatsheet: http://fontawesome.io/cheatsheet/ -->
   <link rel="stylesheet" href="styles/styles.css">
