added html table

--- a/index.html
+++ b/index.html
@@ -40,13 +40,35 @@
         <h2>HTML5</h2>
       </header>
 
-      <table>
-        <!-- one row of table header tags -->
-        <!-- 5 rows of table data tags -->
-      </table>
+	<table style="width:100%", "border: 1px solid black">
+		<tr>
+			<th>#</th>
+			<th>HTML</th>
+		</tr>
+		<tr>
+			<td>1</td>
+			<td>Meta tags are to store information without displaying them on the webpage</td>
+		</tr>
+		<tr>
+			<td>2</td>
+			<td>tr stands for table row and td stands for table data</td>
+		</tr>
+		<tr>
+			<td>3</td>
+			<td>span tag is used to group inline alement and allows the text within the span tags to be manipulatred by CSS and JS</td>
+		</tr>
+		<tr>
+			<td>4</td>
+			<td>UL is an unordered list and li is list items</td>
+		</tr>
+		<tr>
+			<td>5</td>
+			<td>href is used to create a link. the link can be an external or internal link</td>
+		</tr>
+	</table>
 
       <footer>
-        <p><a href="#">add a link to an HTML5 resource here</a></p>
+        <p><a href="https://www.w3schools.com/html/default.asp">follow this link for more help with HTML5</a></p>
       </footer>
     </section>
 
