all styles don (stage 2)

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <h2>HTML5</h2>
       </header>
 
-	<table style="width:100%", "border: 1px solid black">
+	<table style="width:100%">
 		<tr>
 			<th>#</th>
 			<th>HTML</th>
@@ -79,7 +79,11 @@
       </header>
 
       <ul>
-        <!-- 5 li tags -->
+        <li>CSS</li>
+		<li>CSS</li>
+		<li>CSS</li>
+		<li>CSS</li>
+		<li>CSS</li>
       </ul>
 
       <footer>
@@ -94,7 +98,16 @@
       </header>
 
       <dl>
-        <!-- 5 pairs of dt and dd tags -->
+        <dt>let</dt>
+		<dd>defines a variable</dd>
+		<dt>GetElementByID</dt>
+		<dd>fecthes information enetered by user in html and assigns it to the variable</dd>
+		<dt>.InnerHTML</dt>
+		<dd>changes the output of the html within the appropriate HTML line</dd>
+		<dt>Function</dt>
+		<dd>function defines a fucntion</dd>
+		<dt>.addEventListener("submit", PerformGreeting)</dt>
+		<dd>when the event occurs it cals the function "PerformGreeting"</dd>
       </dl>
 
       <footer>
